# aegis-flow

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/: __init__.py
backend/alembic/: env.py
backend/alembic/versions/: 20260702_0001_project_rbac.py  20260702_0002_workflow_drafts.py  20260702_0003_tool_registry_catalog.py  20260702_0004_knowledge_memory_models.py  20260702_0005_mcp_tool_definitions.py  20260702_0006_credential_refs.py  20260702_0007_tool_group_items.py  20260702_0008_tool_group_item_context_filters.py  20260703_0009_secret_leases.py  20260703_0010_tool_gateway_invocations.py  20260703_0011_audit_query_indexes.py  20260703_0012_tool_gateway_approval_tasks.py  20260703_0013_retrieval_eval_runs.py  20260704_0014_model_gateway_policy_invocations.py  20260704_0015_environment_egress_allowed_hosts.py  20260704_0016_environment_egress_proxy_controls.py  20260704_0017_prompt_library_invocation_schema.py  20260704_0018_prompt_template_releases.py  20260704_0019_runtime_trace_spans.py  20260704_0020_runtime_trace_span_nano_bigint.py  20260704_0021_shell_policy_runtime_events.py  20260704_0022_workflow_versions.py  20260704_0023_workflow_runtime_runs.py  20260704_0024_shell_template_execution_fields.py  20260704_0025_http_runner_invocations.py  20260705_0026_workflow_run_events.py  20260705_0027_shell_image_admissions.py  20260705_0028_workflow_run_queue_items.py  20260705_0029_shell_image_admission_policies.py  20260705_0030_notation_trust_certificates.py  20260705_0031_image_artifact_cleanup_lifecycle.py  20260705_0032_image_artifact_cleanup_schedule_lease.py  20260705_0033_image_artifact_lifecycle_remediation_approvals.py  20260706_0035_runtime_approval_tasks.py  (+1 more)
backend/app/: __init__.py  main.py
backend/tests/: conftest.py  final_acceptance_policy.py  test_app.py  test_approval_policy_runtime_binding.py  test_approval_policy_runtime_real_postgres_final_acceptance.py  test_audit_api.py  test_audit_sqlalchemy_store.py  test_checkpoint_retention_real_postgres_final_acceptance.py  test_credential_reference_store_contract.py  test_debug_chat_api.py  test_debug_chat_real_postgres_final_acceptance.py  test_egress_policy.py  test_egress_proxy.py  test_egress_proxy_docker_integration.py  test_egress_proxy_kubernetes_profile.py  test_egress_proxy_profile.py  test_final_acceptance_policy.py  test_global_command_center_api.py  test_global_command_center_sqlalchemy_store.py  test_health.py  test_http_execution_gateway.py  test_knowledge_api.py  test_knowledge_center_real_minio_postgres_final_acceptance.py  test_knowledge_ingestion_pipeline.py  test_knowledge_memory_models.py  test_knowledge_sqlalchemy_store.py  test_llm_node_real_provider_integration.py  test_llm_node_runner.py  test_mcp_tool_call_client.py  test_mcp_tools_client.py  test_memory_review_retrieval_real_postgres_final_acceptance.py  test_model_gateway_api.py  test_model_gateway_real_provider_integration.py  test_model_gateway_settings.py  test_model_gateway_sqlalchemy_store.py  test_notation_trust_certificate_real_final_acceptance.py  test_policy_center_api.py  test_policy_center_approval_policy_real_postgres_final_acceptance.py  test_policy_center_approval_policy_store.py  test_policy_center_real_postgres_final_acceptance.py  (+63 more)
deploy/egress-proxy/: README.md
scripts/: verify-backend.ps1
web/: eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
web/e2e/: workbench.spec.ts
web/scripts/: design-lint.mjs  run-e2e.mjs
web/src/: App.tsx  main.tsx
(+248 files in other folders)
