[project]
name = "aegis-flow"
version = "0.1.0"
description = "Governed agent workflow platform for multi-project teams."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aioboto3>=15.0.0",
  "alembic>=1.16.0",
  "asyncpg>=0.30.0",
  "cryptography>=45.0.0",
  "fastapi>=0.116.0",
  "greenlet>=3.2.0",
  "httpx>=0.28.0",
  "jsonschema>=4.26.0",
  "langgraph>=1.0.0",
  "langgraph-checkpoint-postgres>=3.1.0",
  "psycopg[binary]>=3.3.4",
  "pydantic-settings>=2.10.0",
  "pymilvus>=2.5.0",
  "pyyaml>=6.0",
  "redis>=6.2.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "aiosqlite>=0.21.0",
  "mypy>=1.16.0",
  "pytest>=8.4.0",
  "pytest-asyncio>=1.0.0",
  "pytest-cov>=6.2.0",
  "ruff>=0.12.0",
  "types-jsonschema>=4.25.0",
  "types-pyyaml>=6.0.12",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["backend"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
  "integration: tests that require local external services such as Docker",
  "final_acceptance: tests that prove release-critical behavior against real dependencies",
  "real_ai_provider: tests that call a real OpenAI-compatible AI provider",
  "real_database: tests that require the configured PostgreSQL database",
  "real_docker: tests that require the local Docker daemon and sandboxed containers",
  "real_http: tests that require a real HTTP API server",
  "real_mcp: tests that require a real HTTP MCP server",
  "real_notation: tests that require a real Notation executable and trust policy inputs",
  "real_redis: tests that require the configured Redis instance",
  "real_trivy: tests that require a real Trivy executable or toolchain",
]

[tool.coverage.run]
branch = true
source = ["backend/app"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
